# PGE-File-Library-STL

./: .appveyor.yml  .gitattributes  .gitignore  CMakeLists.txt  CSVReader.h  CSVReaderPGE.h  CSVUtils.h  ConvertUTF.h  ConvertUTF_PGEFF.c  File_FormatsSTL.pri  LICENSE  README.md  build_props.cmake  changelog.md  charsetconvert.h  file_formats.cpp  file_formats.h  file_rw_lvl.cpp  file_rw_lvl_38a.cpp  file_rw_lvl_38a_old.cpp  file_rw_lvlx.cpp  file_rw_meta.cpp  file_rw_npc_txt.cpp  file_rw_sav.cpp  file_rw_savx.cpp  file_rw_smbx64_cnf.cpp  file_rw_wld.cpp  file_rw_wld_38a.cpp  file_rw_wldx.cpp  file_rwopen.cpp  file_strlist.cpp  file_strlist.h  invoke_default.hpp  lvl_filedata.cpp  lvl_filedata.h  meta_filedata.h  npc_filedata.cpp  npc_filedata.h  pge_base_callbacks.h  pge_ff_units.h  (+19 more)
bindings/ATL/: .gitignore  .gitmodules  README.md  pgelib.sln
bindings/ATL/pgelib2015/PGEFile/: PGEFile.sln
bindings/ATL/pgelib2015/PGEFile/PGEFile/: PGEFile.cpp  PGEFile.def  PGEFile.idl  PGEFile.rc  PGEFile.vcxproj  PGEFile.vcxproj.filters  PGEFileFactory.cpp  PGEFileFactory.h  PGEFileFactory.rgs  PGELevelBGO.cpp  PGELevelBGO.h  PGELevelBGO.rgs  PGELevelBGOs.cpp  PGELevelBGOs.h  PGELevelBGOs.rgs  PGELevelBlock.cpp  PGELevelBlock.h  PGELevelBlock.rgs  PGELevelBlocks.cpp  PGELevelBlocks.h  PGELevelBlocks.rgs  PGELevelData.cpp  PGELevelData.h  PGELevelData.rgs  PGELevelEvent.cpp  PGELevelEvent.h  PGELevelEvent.rgs  PGELevelEvents.cpp  PGELevelEvents.h  PGELevelEvents.rgs  PGELevelLayer.cpp  PGELevelLayer.h  PGELevelLayer.rgs  PGELevelLayers.cpp  PGELevelLayers.h  PGELevelLayers.rgs  PGELevelNPC.cpp  PGELevelNPC.h  PGELevelNPC.rgs  PGELevelNPCs.cpp  (+42 more)
bindings/ATL/pgelib2015/PGEFile/PGEFile/ErrorHelper/: Error.cpp  Error.h
bindings/ATL/pgelib2015/PGEFile/PGEFile/Utils/: ComUtils.cpp  ComUtils.h  GenericCopyPolicy.h  PGEStringUtils.h
bindings/ATL/pgelib2015/examples/Python/: counting.py
bindings/ATL/pgelib2015/examples/VBS/: counting.vbs
cmake/checks/stdstrtoi/: has_std_stol.cpp
docs/PGE-X/: LVLX file description.odt  WLDX file description.odt
docs/SMBX-38A/: smbx-38A File specifications (LVL WLD WLS).odt  smbx-38A File specifications (LVL WLD WLS).txt  smbx-38A v68 File specifications (LVL WLD WLS).rtf  smbx-38A v69 File specifications (LVL WLD WLS).rtf
docs/SMBX64/: LVL file description.odt  SAV file description.odt  WLD file description.odt
old/: file_rw_lvl_38a_old.cpp
src/: CSVUtils.h  charsetconvert.h  file_formats.cpp  file_rwopen.cpp  lvl_filedata.cpp  npc_filedata.cpp  pge_file_lib_globs.cpp  pge_file_lib_globs_rwops.cpp  pge_file_lib_private.h  pge_file_lib_sys.h  save_filedata.cpp  wld_filedata.cpp
src/mdx/: mdx_gamesave_file.cpp  mdx_gamesave_file.h  mdx_gamesave_file_rw.cpp  mdx_level_file.cpp  mdx_level_file.h  mdx_level_file_rw.cpp  mdx_meta_file.cpp  mdx_meta_file.h  mdx_meta_file_rw.cpp  mdx_meta_objects.hpp  mdx_utils.h  mdx_world_file.cpp  mdx_world_file.h  mdx_world_file_rw.cpp
src/mdx/common/: mdx_exception.cpp  mdx_exception.h  mdx_field.h  mdx_field.hpp  mdx_file.cpp  mdx_file.h  mdx_macros.h  mdx_object.cpp  mdx_object.h  mdx_section.cpp  mdx_section.h  mdx_value.h
src/mdx/common/value/: mdx_value_boollist.cpp  mdx_value_list.hpp  mdx_value_numeric.cpp  mdx_value_object.hpp  mdx_value_objectlist.hpp  mdx_value_qstringlist.cpp  mdx_value_string.cpp
src/mdx/common/value/milo_yip/: itoa.h
src/old/: file_rw_lvl_38a_old.cpp
src/pgex/: file_rw_lvlx.cpp  file_rw_meta.cpp  file_rw_savx.cpp  file_rw_wldx.cpp  file_strlist.cpp  file_strlist.h  pge_x.cpp  pge_x.h  pge_x_macro.h
src/smbx38a/: file_rw_lvl_38a.cpp  file_rw_wld_38a.cpp  smbx38a_private.h
src/smbx64/: file_rw_lvl.cpp  file_rw_npc_txt.cpp  file_rw_sav.cpp  file_rw_smbx64_cnf.cpp  file_rw_wld.cpp  smbx64.cpp  smbx64.h  smbx64_cnf_filedata.cpp
test/: CMakeLists.txt
test/38aWarpEffects/: 38a_warp_effect.cpp  CMakeLists.txt  warp0.lvl  warp1.lvl  warp2.lvl  warp3.lvl  warp4.lvl
test/GameSave/: CMakeLists.txt  save_userdata.cpp
test/LevelLoad/: CMakeLists.txt  level_load.cpp  sample.lvl
test/NpcTxt/: CMakeLists.txt  npc-876.txt  npctxt.cpp
test/ReadWrite/: CMakeLists.txt  read_write_test.cpp
test/ReadWrite/test-files/SMBX-38A/: test-140.lvl  test-140.wld  test-140.wls  test-141.lvl  test-141.wld  test-141.wls  test-142.lvl  test-142.wld  test-143.lvl  test-143.wld  test-144.lvl  test-144.wld  test-145.lvl  test-145.wld  wld-events-test.wld
test/old_deep_tests/PGEFileLib_test_files/smbx38a/: 0-0.lvl  1-1.lvl  1-2.lvl  1-3.lvl  1-4.lvl  2-1.lvl  2-2.lvl  2-3.lvl  2-4.lvl  3-1.lvl  3-2.lvl  3-3.lvl  3-4.lvl  4-1.lvl  4-2.lvl  4-3.lvl  4-4.lvl  5-1.lvl  5-2.lvl  Game over.lvl  custom_configs_demo.lvl  xxx.lvl
test/old_deep_tests/PGEFileLib_test_files/smbx38a_wld/: Best sausidge.wld  ChickenKing.wld  shnaga.wld  tinvworld.wld
test/old_deep_tests/PGEFilelib_QT_test/: PGEFilelib_QT_test.pro  main.cpp
test/old_deep_tests/PGEFilelib_QT_test/build-PGEFilelib_QT_test-InSystem_Qt_5-Debug/: moc_file_formats.cpp  moc_file_strlist.cpp  moc_pge_x.cpp
test/old_deep_tests/PGEFilelib_STL_test/: PGEFilelib_STL_test.pro  main.cpp  test.lvl  test.wld  test_65-38a.lvl
